--- a/projects/triqui/src/index.css
+++ b/projects/triqui/src/index.css
@@ -1,11 +1,11 @@
 @import "tailwindcss";
 
 .main-style{
-  @apply flex flex-col justify-center items-center mt-5 lg:gap-5 md:gap-15
+  @apply flex flex-col justify-center items-center mt-5 gap-10 lg:gap-5 md:gap-15
 }
 
 .button-style {
-  @apply lg:h-[35px] lg:w-[150px] lg:text-base border-2 border-white rounded-3xl hover:bg-[#D4ADFC] hover:text-black hover:border-black hover:cursor-pointer md:h-[70px] md:w-[250px] md:text-2xl; 
+  @apply h-[60px] w-[180px] lg:text-base border-2 border-white rounded-3xl text-xl hover:bg-[#D4ADFC] hover:text-black hover:border-black hover:cursor-pointer md:h-[70px] md:w-[250px] md:text-2xl lg:h-[35px] lg:w-[150px]; 
 }
 
 .encode-sans {
@@ -13,6 +13,6 @@
 }
 
 .style-h1 {
-  @apply lg:text-4xl font-bold text-[#F2F2F2] md:text-6xl;
+  @apply text-3xl font-bold text-[#F2F2F2] lg:text-4xl md:text-6xl;
 }
 
