--- a/projects/triqui/src/index.css
+++ b/projects/triqui/src/index.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 .main-style{
   @apply flex flex-col justify-center items-center mt-5 gap-10 lg:gap-5 md:gap-15
